--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -48,11 +48,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7f4c5331",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilidades de pertencer à classe de suporte:\n",
+      " tensor([2.8024e-36, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00, 0.0000e+00,\n",
+      "        1.5411e-38, 0.0000e+00, 1.6838e-38, 0.0000e+00])\n",
+      "Predições (1 = pertence, 0 = não pertence):\n",
+      " tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "# Um único embedding de suporte\n",
+    "support_embedding = torch.randn(1, 64)  # shape: [1, D]\n",
+    "\n",
+    "# Queries\n",
+    "num_queries = 10\n",
+    "query_embeddings = torch.randn(num_queries, 64)  # shape: [Q, D]\n",
+    "\n",
+    "# Calcula distância euclidiana\n",
+    "diff = query_embeddings - support_embedding  # broadcast: [Q, D]\n",
+    "dists = torch.sum(diff ** 2, dim=1)  # [Q]\n",
+    "\n",
+    "# Converte a distância para uma \"probabilidade\" de pertencer à mesma classe\n",
+    "# Aqui, menor distância → maior similaridade\n",
+    "similarity = -dists  # ou usar exp(-dists)\n",
+    "probs = torch.sigmoid(similarity)  # valores entre 0 e 1\n",
+    "\n",
+    "# Limite de decisão: 0.5 (pode ser ajustado)\n",
+    "preds = (probs > 0.5).long()\n",
+    "\n",
+    "print(\"Probabilidades de pertencer à classe de suporte:\\n\", probs)\n",
+    "print(\"Predições (1 = pertence, 0 = não pertence):\\n\", preds)\n"
+   ]
   }
  ],
  "metadata": {
