Add data loading and processing for embeddings in test notebook
- Updated execution counts for existing code cells.
- Added new code cell to load embeddings from a specified NPZ file.
- Processed database and query embeddings, paths, and labels.
- Created a class mapping dictionary for labels.
- Saved the processed data into a new NPZ file.
- Fixed a NameError related to undefined 'query_labels'.

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "02b1cb82",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "d936a212",
    "metadata": {},
    "outputs": [
@@ -44,6 +44,103 @@
    "source": [
     "for i in data.keys():\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "30130316",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_path = \"../artifacts/glomerulo/embeddings_uni_fsl/embeddings_2025-04-20_15-19-51.npz\"\n",
+    "data = np.load(folder_path, allow_pickle=True)\n",
+    "\n",
+    "class_mapping = data['class_mapping'].item()\n",
+    "\n",
+    "db_embeddings = data['db_embeddings']\n",
+    "db_paths = data['db_path']\n",
+    "db_labels = np.array([class_mapping[i] for i in data['db_labels']])\n",
+    "\n",
+    "q_embeddings = data['query_embeddings']\n",
+    "q_paths = data['query_paths']\n",
+    "q_labels = np.array([f'q_{class_mapping[i]}' for i in data['query_labels']])\n",
+    "data_res = dict()\n",
+    "\n",
+    "\n",
+    "\n",
+    "all_embeddings = np.vstack([db_embeddings, q_embeddings])\n",
+    "all_labels = np.concatenate([db_labels, q_labels])\n",
+    "all_paths = np.concatenate([db_paths, q_paths])\n",
+    "\n",
+    "\n",
+    "cm = {}\n",
+    "for label in all_labels:\n",
+    "    if label not in cm:\n",
+    "        cm[label] = label\n",
+    "\n",
+    "data_res['db_embeddings'] = all_embeddings\n",
+    "data_res['db_path'] = all_paths\n",
+    "data_res['db_labels'] = all_labels\n",
+    "data_res['query_embeddings'] = all_embeddings\n",
+    "data_res['query_paths'] = all_paths\n",
+    "data_res['query_labels'] = all_labels\n",
+    "data_res['class_mapping'] = cm \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "625475c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Crescent': 'Crescent',\n",
+       " 'Hypercellularity': 'Hypercellularity',\n",
+       " 'Membranous': 'Membranous',\n",
+       " 'Normal': 'Normal',\n",
+       " 'Podocytopathy': 'Podocytopathy',\n",
+       " 'Sclerosis': 'Sclerosis',\n",
+       " 'q_Crescent': 'q_Crescent',\n",
+       " 'q_Hypercellularity': 'q_Hypercellularity',\n",
+       " 'q_Membranous': 'q_Membranous',\n",
+       " 'q_Normal': 'q_Normal',\n",
+       " 'q_Podocytopathy': 'q_Podocytopathy',\n",
+       " 'q_Sclerosis': 'q_Sclerosis'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "np.savez('all_data_embeddings_uni_fsl.npz', **data_res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83253d2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'query_labels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mquery_labels\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'query_labels' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
    ]
   },
   {
