Update execution count to null and add comments for clarity in metric comparison

--- a/notebooks/retrieval_pretreined_glomerulo.ipynb
+++ b/notebooks/retrieval_pretreined_glomerulo.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3af915c2",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,11 @@
     }
    ],
    "source": [
-    "plot_metric_comparison(\"map\", latest_experiments)"
+    "plot_metric_comparison(\"map\", latest_experiments)\n",
+    "# Aumentar a letra \"K\"\n",
+    "# Top 10\n",
+    "# Applicar normalização nos embeddings\n",
+    "# usar apenas datasewt Glomerlo, Ovarian cance e skin cancer"
    ]
   },
   {
