Update experiment links and modify dataset analysis output; add glomerulo pretrained image

--- a/notebooks/datasets.ipynb
+++ b/notebooks/datasets.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bc3a8a27",
    "metadata": {},
    "outputs": [],
@@ -135,82 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset Distribution Summary:\n",
-      "                                               count                      \\\n",
-      "split                                    retriv_test  test   train   val   \n",
-      "dataset                 class                                              \n",
-      "CRC-VAL-HE-7K-splitted  ADI                      0.0  10.0  1328.0   0.0   \n",
-      "                        BACK                     0.0  10.0   837.0   0.0   \n",
-      "                        DEB                      0.0  10.0   329.0   0.0   \n",
-      "                        LYM                      0.0  10.0   624.0   0.0   \n",
-      "                        MUC                      0.0  10.0  1025.0   0.0   \n",
-      "                        MUS                      0.0  10.0   582.0   0.0   \n",
-      "                        NORM                     0.0  10.0   731.0   0.0   \n",
-      "                        STR                      0.0  10.0   411.0   0.0   \n",
-      "                        TUM                      0.0  10.0  1223.0   0.0   \n",
-      "bracs-resized           0_N                     10.0  81.0   357.0  46.0   \n",
-      "                        1_PB                    10.0  79.0   714.0  43.0   \n",
-      "                        2_UDH                   11.0  82.0   389.0  46.0   \n",
-      "                        3_FEA                   10.0  83.0   624.0  49.0   \n",
-      "                        4_ADH                   10.0  79.0   387.0  41.0   \n",
-      "                        5_DCIS                  10.0  85.0   665.0  40.0   \n",
-      "                        6_IC                    10.0  81.0   521.0  47.0   \n",
-      "glomerulo               Crescent                 0.0  12.0  1180.0   0.0   \n",
-      "                        Hypercellularity         0.0  10.0  2048.0   0.0   \n",
-      "                        Membranous               0.0   7.0  1608.0   0.0   \n",
-      "                        Normal                   0.0  15.0  1570.0   0.0   \n",
-      "                        Podocytopathy            0.0  10.0   559.0   0.0   \n",
-      "                        Sclerosis                0.0  10.0   617.0   0.0   \n",
-      "ovarian-cancer-splitted Clear_Cell               0.0  10.0    90.0   0.0   \n",
-      "                        Endometri                0.0  10.0    88.0   0.0   \n",
-      "                        Mucinous                 0.0  10.0    90.0   0.0   \n",
-      "                        Non_Cancerous            0.0  10.0    89.0   0.0   \n",
-      "                        Serous                   0.0  10.0    90.0   0.0   \n",
-      "skin-cancer-splitted    akiec                    0.0  10.0   260.0   0.0   \n",
-      "                        bcc                      0.0  10.0   371.0   0.0   \n",
-      "                        bkl                      0.0  10.0   759.0   0.0   \n",
-      "                        df                       0.0  10.0    73.0   0.0   \n",
-      "                        mel                      0.0  10.0   581.0   0.0   \n",
-      "                        nv                       0.0  10.0  4846.0   0.0   \n",
-      "                        vasc                     0.0  10.0    84.0   0.0   \n",
-      "\n",
-      "                                          percentage                       \n",
-      "split                                    retriv_test   test  train    val  \n",
-      "dataset                 class                                              \n",
-      "CRC-VAL-HE-7K-splitted  ADI                     0.00  11.11  18.73   0.00  \n",
-      "                        BACK                    0.00  11.11  11.81   0.00  \n",
-      "                        DEB                     0.00  11.11   4.64   0.00  \n",
-      "                        LYM                     0.00  11.11   8.80   0.00  \n",
-      "                        MUC                     0.00  11.11  14.46   0.00  \n",
-      "                        MUS                     0.00  11.11   8.21   0.00  \n",
-      "                        NORM                    0.00  11.11  10.31   0.00  \n",
-      "                        STR                     0.00  11.11   5.80   0.00  \n",
-      "                        TUM                     0.00  11.11  17.25   0.00  \n",
-      "bracs-resized           0_N                    14.08  14.21   9.76  14.74  \n",
-      "                        1_PB                   14.08  13.86  19.52  13.78  \n",
-      "                        2_UDH                  15.49  14.39  10.64  14.74  \n",
-      "                        3_FEA                  14.08  14.56  17.06  15.71  \n",
-      "                        4_ADH                  14.08  13.86  10.58  13.14  \n",
-      "                        5_DCIS                 14.08  14.91  18.18  12.82  \n",
-      "                        6_IC                   14.08  14.21  14.25  15.06  \n",
-      "glomerulo               Crescent                0.00  18.75  15.56   0.00  \n",
-      "                        Hypercellularity        0.00  15.62  27.01   0.00  \n",
-      "                        Membranous              0.00  10.94  21.21   0.00  \n",
-      "                        Normal                  0.00  23.44  20.71   0.00  \n",
-      "                        Podocytopathy           0.00  15.62   7.37   0.00  \n",
-      "                        Sclerosis               0.00  15.62   8.14   0.00  \n",
-      "ovarian-cancer-splitted Clear_Cell              0.00  20.00  20.13   0.00  \n",
-      "                        Endometri               0.00  20.00  19.69   0.00  \n",
-      "                        Mucinous                0.00  20.00  20.13   0.00  \n",
-      "                        Non_Cancerous           0.00  20.00  19.91   0.00  \n",
-      "                        Serous                  0.00  20.00  20.13   0.00  \n",
-      "skin-cancer-splitted    akiec                   0.00  14.29   3.73   0.00  \n",
-      "                        bcc                     0.00  14.29   5.32   0.00  \n",
-      "                        bkl                     0.00  14.29  10.88   0.00  \n",
-      "                        df                      0.00  14.29   1.05   0.00  \n",
-      "                        mel                     0.00  14.29   8.33   0.00  \n",
-      "                        nv                      0.00  14.29  69.49   0.00  \n",
-      "                        vasc                    0.00  14.29   1.20   0.00  \n"
+      "Dataset Distribution Summary:\n"
      ]
     }
    ],
@@ -229,7 +154,7 @@
     ").round(2)\n",
     "\n",
     "print(\"Dataset Distribution Summary:\")\n",
-    "print(distribution_table)"
+    "# print(distribution_table)"
    ]
   },
   {
@@ -243,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "cd50b839",
    "metadata": {},
    "outputs": [
@@ -363,6 +288,41 @@
     "    plt.close()\n",
     "\n",
     "print(\"Analysis results saved to 'analysis_results' directory\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fff8407",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dataset                  split      \n",
+       "CRC-VAL-HE-7K-splitted   test             90\n",
+       "                         train          7090\n",
+       "bracs-resized            retriv_test      71\n",
+       "                         test            570\n",
+       "                         train          3657\n",
+       "                         val             312\n",
+       "glomerulo                test             64\n",
+       "                         train          7582\n",
+       "ovarian-cancer-splitted  test             50\n",
+       "                         train           447\n",
+       "skin-cancer-splitted     test             70\n",
+       "                         train          6974\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['dataset','split'])['count'].sum()\n",
+    "# Aumentar todos os datasets para tamanho do dataset do glomerulo"
    ]
   },
   {
