--- a/notebooks/retrieval_pretreined_glomerulo.ipynb
+++ b/notebooks/retrieval_pretreined_glomerulo.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "07e245e6",
    "metadata": {},
    "outputs": [],
@@ -43,17 +43,7 @@
     "specific_experiments = []  # Change as needed; empty list means \"use latest per experiment type\"\n",
     "\n",
     "# Retrieve the experiments based on the provided filter.\n",
-    "latest_experiments = get_latest_experiments(BASE_DIR, specific_experiments)\n",
-    "\n",
-    "# if not latest_experiments:\n",
-    "#     print(\"No experiments found.\")\n",
-    "# else:\n",
-    "#     # Iterate over each experiment type and process.\n",
-    "#     for exp_type, exp_info in latest_experiments.items():\n",
-    "#         # Aggregate the compiled metrics from the experiment folder.\n",
-    "#         aggregated = aggregate_metrics(exp_info[\"path\"])\n",
-    "#         # Plot all available metrics (accuracy, recall, map, precision)\n",
-    "#         plot_all_metrics(aggregated, exp_type)\n"
+    "latest_experiments = get_latest_experiments(BASE_DIR, specific_experiments)\n"
    ]
   },
   {
@@ -331,7 +321,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -345,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
