--- a/notebooks/retr_test_backone_glomerulo/retrieval_pretreined_skin-cancer.ipynb
+++ b/notebooks/retr_test_backone_glomerulo/retrieval_pretreined_skin-cancer.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c9a479bd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "\n",
+    "\n",
     "import json\n",
     "from utils import (\n",
     "    get_latest_experiments,\n",
