--- a/notebooks/retr_test_backone_glomerulo/retrieval_pretreined_ovarian_cancer.ipynb
+++ b/notebooks/retr_test_backone_glomerulo/retrieval_pretreined_ovarian_cancer.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c9a479bd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "\n",
+    "\n",
     "import json\n",
     "from utils import (\n",
     "    get_latest_experiments,\n",
@@ -272,7 +278,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -286,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
