--- a/notebooks/retr_test_fsl/retrieval_pretreined_ovarian_cancer.ipynb
+++ b/notebooks/retr_test_fsl/retrieval_pretreined_ovarian_cancer.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3af915c2",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
     "        \"mAP\", \n",
     "        latest_experiments,\n",
     "        legend_location='lower right',\n",
-    "        save_as=\"ovarian_cancer2\",\n",
+    "        save_as=\"ovarian_cancer_fsl\",\n",
     "    )\n",
     "# usar freya\n",
     "# remover titulo dos graficos\n",
